--- a/SyncPlaylistApp/Views/MainPage.xaml
+++ b/SyncPlaylistApp/Views/MainPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodels="clr-namespace:SyncPlaylistApp.ViewModels"
-             xmlns:models="clr-namespace:SyncPlaylistApp.Models"
+             xmlns:models="clr-namespace:SyncPlaylistApp.Core.Models;assembly=SyncPlaylistApp.Core"
              x:Class="SyncPlaylistApp.Views.MainPage"
              Title="Sync Playlist App">
 
