Refactor OnInitialized method to use synchronous implementation and improve property change subscription

--- a/SyncPlaylistApp.Web/Pages/Home.razor
+++ b/SyncPlaylistApp.Web/Pages/Home.razor
@@ -98,9 +98,9 @@
 </div>
 
 @code {
-    protected override async Task OnInitializedAsync()
+    protected override void OnInitialized()
     {
-        // Check existing authentication status
+        // Subscribe to property changes for reactive UI updates
         ViewModel.PropertyChanged += (s, e) => InvokeAsync(StateHasChanged);
     }
 
